[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Primitives of BSC(Binance Smart Chain) Bridge module."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "bsc-primitives"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.4"

[dependencies]
# crates.io
array-bytes     = { version = "1.4", optional = true }
codec           = { package = "parity-scale-codec", version = "2.2", default-features = false }
ethbloom        = { version = "0.11", default-features = false, features = ["codec", "rlp"] }
hash-db         = { version = "0.15", default-features = false }
plain_hasher    = { version = "0.2", default-features = false }
primitive-types = { version = "0.10", default-features = false, features = ["codec", "rlp"] }
rlp             = { version = "0.5", default-features = false }
scale-info      = { version = "1.0", default-features = false, features = ["derive"] }
serde           = { version = "1.0", optional = true }
triehash        = { version = "0.8", default-features = false }
# paritytech
sp-io      = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-std     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }

[dev-dependencies]
# crates.io
array-bytes = { version = "1.4", features = ["serde"] }
ethbloom    = { version = "0.11", default-features = false, features = ["codec", "rlp", "serialize"] }
serde_json  = { version = "1.0" }

[features]
default = ["std"]

std = [
	# crates.io
	"array-bytes/serde",
	"codec/std",
	"ethbloom/std",
	"ethbloom/serialize",
	"hash-db/std",
	"plain_hasher/std",
	"primitive-types/std",
	"primitive-types/serde",
	"rlp/std",
	"scale-info/std",
	"serde",
	"triehash/std",
	# paritytech
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
