[package]
authors     = ["Darwinia Network <tianyi.song@itering.com>"]
description = "Primitives of BSC Bridge module."
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "bsc-primitives"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.4.0"

[dependencies]
# crates.io
codec           = { package = "parity-scale-codec", version = "2.1.1", default-features = false }
ethbloom        = { version = "0.11.0", default-features = false, features = ["rlp"] }
hash-db         = { version = "0.15.2", default-features = false }
plain_hasher    = { version = "0.2.3", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["codec", "rlp"] }
rlp             = { version = "0.5.0", default-features = false }
serde           = { version = "1.0.126", optional = true }
serde-big-array = { version = "0.3.2", optional = true }
triehash        = { version = "0.8.4", default-features = false }
# substrate
sp-io      = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1", default-features = false }
sp-runtime = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1", default-features = false }
sp-std     = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.1", default-features = false }

[dev-dependencies]
array-bytes = { version = "1.1.0" }

[features]
default = ["std"]
std     = [
	"codec/std",
	"ethbloom/std",
	"hash-db/std",
	"plain_hasher/std",
	"primitive-types/std",
	"primitive-types/serde",
	"rlp/std",
	"serde",
	"serde-big-array",
	"triehash/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
