[package]
authors     = ["Darwinia Network <tianyi.song@itering.com>"]
description = "Primitives of BSC(Binance Smart Chain) Bridge module."
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "bsc-primitives"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.1"

[dependencies]
# crates.io
array-bytes     = { version = "1.3.3", optional = true }
codec           = { package = "parity-scale-codec", version = "2.1.1", default-features = false }
ethbloom        = { version = "0.11.0", default-features = false, features = ["codec", "rlp"] }
hash-db         = { version = "0.15.2", default-features = false }
plain_hasher    = { version = "0.2.3", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["codec", "rlp"] }
rlp             = { version = "0.5.0", default-features = false }
serde           = { version = "1.0.127", optional = true }
triehash        = { version = "0.8.4", default-features = false }
# paritytech
sp-io      = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-std     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }

[dev-dependencies]
# crates.io
array-bytes = { version = "1.3.3", features = ["serde"] }
ethbloom    = { version = "0.11.0", default-features = false, features = ["codec", "rlp", "serialize"] }
serde_json  = { version = "1.0.66" }

[features]
default = ["std"]

std = [
	# crates.io
	"array-bytes/serde",
	"codec/std",
	"ethbloom/std",
	"ethbloom/serialize",
	"hash-db/std",
	"plain_hasher/std",
	"primitive-types/std",
	"primitive-types/serde",
	"rlp/std",
	"serde",
	"triehash/std",
	# paritytech
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
