[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Primitives for DVM consensus"
edition     = "2018"
homepage    = "https://substrate.dev"
license     = "Apache-2.0"
name        = "dp-consensus"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.0"

[dependencies]
# crates.io
codec    = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
rlp      = { version = "0.5", default-features = false }
sha3     = { version = "0.9.1", default-features = false }
# paritytech
sp-core    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-std     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethereum/std",
	"rlp/std",
	"sha3/std",
	# paritytech
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
]
